2001-11-07  Danny Smith  <dannysmith@users.sourceforge.net> 

	* include/ctype.h (tolower, toupper,_tolower,_toupper): Comment 
	differences between ANSI and non-ANSI versions. 
	(_ctype[],_pctype): Declare vars. 
	(__ISCTYPE): New helper macro using _pctype. 
	(is* ctype functions): Use __ISCTYPE to define inline versions. 
	(_toupper, _tolower, __isascii, __toascii, __iscsym, __iscsymf):
	Inline definitions. 
	(isw* ctype functions): Inline definitions. 
	* include/wctype.h (_ctype[],_pctype): Declare vars. 
	(isw* ctype functions): Inline definitions. 


2001-11-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/float.h (_clearfp, _statusfp, _fpreset, fpreset,
	__fpecode): Use __STDC__ prototypes.
 

2001-11-06 Thomas Pfaff <tpfaff@gmx.net>

 	* mthr_stub.c (__mingwthr_remove_key_dtor) New.
 	* mthr_init.c (DllMain) Run dtors if a process terminates.
 	* mthr.c  (__mingwthr_add_key_dtor)  Removed.
 	(___mingwthr_add_key_dtor)  New.
 	(___mingwthr_remove_key_dtor) New.
 	(__mingwthr_run_key_dtors) Complete rewrite.
  	(__mingwthr_remove_key_dtor) New.

2001-11-06  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/errno.h (_errno): Use __STDC__ prototype.
	Thanks to: Jim Barton.

2001-11-04  "stefan" <stefan@lkcc.org>

	* include/sys/locking.h (_LK_UNLCK, LK_UNLCK): Correct names.

2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/io.h (_commit): Add declaration.
	Thanks to: "stefan" <stefan@lkcc.org>  

2001-10-30  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/sys/stat.h: Make S_IS* macros safer.

2001-10-27  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (EXIT_FAILURE): Change value to 1.

2001-10-12  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (__p__environ, __p__wenviron): Use
	__STDC__ prototypes.
	
2001-09-19  Earnie Boyd  <earnie@SF.net>

	* Makefile.in: Remove the /usr from the install target.
	(VERSION): Increment.
	include/_mingw.h: Ditto.
